fix(Tertiary): alignment fix fox Modal

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -394,6 +394,7 @@ span {
   background-color: var(--kd-color-background-button-tertiary-state-default);
   color: var(--kd-color-text-button-light-primary);
   border: none;
+  min-width: initial;
 
   &:hover {
     background-color: var(--kd-color-background-button-tertiary-state-hover);
